# SnapFuzz

./: .gitmodules  LICENSE  README.md
plugins/sbr-afl/: CMakeLists.txt  main.c
plugins/sbr-afl/libsqlfs/: sqlfs.c
plugins/sbr-memfs/: CMakeLists.txt  main.c
plugins/sbr-zbox/: CMakeLists.txt  main.c
snapfuzz/: CMakeLists.txt  main.c
snapfuzz/libsqlfs/: configure.in  sqlfs.c  sqlfs.h  sqlfs_internal.h
